styles: prevent image distortion

--- a/src/components/SearchInput/searchInput.module.css
+++ b/src/components/SearchInput/searchInput.module.css
@@ -24,6 +24,10 @@
   margin: 0 0.7rem;
 }
 
+.inputContainer img {
+  max-width: none;
+}
+
 .inputContainer button,
 .inputContainer button:hover {
   all: unset;
